--- a/style.css
+++ b/style.css
@@ -2201,6 +2201,7 @@ div.gallery .close {
 	position:relative;
 	width:90%;
 	height:136px;
+	overflow-x:scroll;
 	margin:50px auto 0;
 }
 .thumbs ul {
